<resources>
    <string name="app_name">PizzaBuilder-v2</string>
    <string name="currentorder">Current Order</string>
    <string name="address">Address:</string>
    <string name="tax">Tax:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="backtobuilder">Go Back</string>
    <string name="total">Total:</string>
    <string name="cardnum">Card Number</string>
    <string name="expdate">Exp</string>
    <string name="CVV">CVV</string>
    <string name="randomizer">Can\'t Decide?</string>
    <string name="finished">Done</string>
    <string name="card_number">Card Number</string>
    <string name="complete_order">Complete Order</string>
    <string name="tip">Tip:</string>
    <string name="tenpercent">10%</string>
    <string name="fifteenpercent">15%</string>
    <string name="twentypercent">20%</string>
    <string name="custom_tip">Custom Tip</string>
    <string name="check_address">Check Address</string>
</resources>